# contextcore

./: .bandit  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  TEST_QUALITY_REPORT.md  compile_protos.sh  contextcore-fulldoc.md  pyproject.toml
.agent/rules/: contextcore-rules.md
.github/workflows/: ci.yml
protos/: admin.proto  brain.proto  commerce.proto  context_unit.proto  contextunit.proto  router.proto  shield.proto  worker.proto  zero.proto
src/: admin_pb2.py  admin_pb2_grpc.py  brain_pb2.py  brain_pb2_grpc.py  commerce_pb2.py  commerce_pb2_grpc.py  context_unit_pb2_grpc.py  router_pb2.py  router_pb2_grpc.py  shield_pb2.py  shield_pb2_grpc.py  worker_pb2.py  worker_pb2_grpc.py  zero_pb2.py  zero_pb2_grpc.py
src/contextcore/: __init__.py  admin_pb2.py  admin_pb2_grpc.py  brain_pb2.py  brain_pb2_grpc.py  commerce_pb2.py  commerce_pb2_grpc.py  config.py  context_unit_pb2.py  discovery.py  ed25519.py  exceptions.py  grpc_utils.py  interfaces.py  logging.py  router_pb2.py  router_pb2_grpc.py  sdk.py  shield_pb2.py  shield_pb2_grpc.py  signing.py  token_utils.py  tokens.py  worker_pb2.py  worker_pb2_grpc.py  zero_pb2.py  zero_pb2_grpc.py
src/contextcore/authz/: __init__.py  access_manager.py  context.py  engine.py
src/contextcore/cli/: __init__.py  admin.py  mint.py  validate.py
src/contextcore/manifest/: __init__.py  generators.py  models.py
src/contextcore/manifest/examples/: contextunity.project.yaml
src/contextcore/permissions/: __init__.py  access.py  constants.py  inheritance.py  policy.py  validation.py
src/contextcore/sdk/: __init__.py  config.py  context_unit.py  identity.py  models.py  prompt_integrity.py  router_client.py  smart_client.py  tools.py  worker_client.py
src/contextcore/sdk/bootstrap/: __init__.py  api.py  client.py  helpers.py  loop.py  manifest.py
src/contextcore/sdk/brain/: __init__.py  base.py  commerce.py  knowledge.py  memory.py  news.py  traces.py
src/contextcore/sdk/clients/: router.py  worker.py
src/contextcore/sdk/streaming/: __init__.py  bidi.py  heartbeat.py
src/contextcore/security/: __init__.py  guard.py  interceptors.py  utils.py
src/contextcore/token_utils/: __init__.py  grpc.py  http.py  public_key.py  sdk.py  serialization.py
src/contextunity/core/: __init__.py  admin_pb2.py  admin_pb2_grpc.py  admin_pb2_grpc.pyi  auth_posture.py  brain_pb2.py  brain_pb2_grpc.py  brain_pb2_grpc.pyi  braincell_identity.py  concurrency.py  config.py  contextunit_pb2.py  contextunit_pb2.pyi  contextunit_pb2_grpc.py  control.py  discovery.py  dlq.py  documentation.py  ed25519.py  exceptions.py  faults.py  grpc_client_errors.py  grpc_errors.py  grpc_metadata.py  grpc_utils.py  interfaces.py  logging.py  model_reference.py  narrowing.py  operator_auth.py  operator_credentials.py  parsing.py  passbyref.py  pii.py  router_pb2.py  router_pb2_grpc.py  router_pb2_grpc.pyi  shield_pb2.py  shield_pb2_grpc.py  shield_pb2_grpc.pyi  (+11 more)
src/contextunity/core/authz/: __init__.py  access_manager.py  context.py  engine.py  tenant.py
src/contextunity/core/cli/: __init__.py  main.py  mint.py  validate.py
src/contextunity/core/config/: __init__.py  env.py  factory.py  loader.py  models.py  paths.py
src/contextunity/core/discovery/: __init__.py  async_client.py  client.py  config.py  contracts.py  crypto.py  project_keys.py  projects.py  redis_store.py  resolve.py  services.py  store.py  types.py
src/contextunity/core/manifest/: __init__.py  bundle_hash.py  generators.py  helpers.py  models.py  router.py  tenants.py
src/contextunity/core/permissions/: __init__.py  access.py  constants.py  inheritance.py  policy.py  services.py  validation.py
src/contextunity/core/sdk/: __init__.py  agentic_guidance.py  config.py  contextunit.py  conversation.py  execution_trace.py  execution_trace_artifacts.py  identity.py  interfaces.py  models.py  payload.py  prompt_integrity.py  provider_usage.py  responses.py  service_helpers.py  toolkit.py  tools.py  types.py
src/contextunity/core/security/: __init__.py  backend_resolver.py  fetch.py  interceptors.py  utils.py
src/contextunity/core/service_health/: __init__.py  config.py  grpc.py  models.py  publisher.py  reader.py  redis.py  runtime.py
src/contextunity/core/signing/: __init__.py  hmac.py  protocols.py  registry.py  service_auth.py  session.py  shield_client.py
tests/: __init__.py  test_agentic_guidance.py  test_auth_posture.py  test_brain_client_local.py  test_braincell_identity.py  test_coerce_struct_data.py  test_compiler_exceptions.py  test_concurrency.py  test_config.py  test_contract_boundaries.py  test_conversation_contracts.py  test_discovery.py  test_discovery_resolve.py  test_discovery_store.py  test_dlq.py  test_documentation.py  test_error_handling.py  test_exceptions_contract.py  test_execution_trace_artifacts.py  test_faults.py  test_get_or_create_stream_secret.py  test_grpc_discovery_host.py  test_grpc_errors.py  test_grpc_standard_health.py  test_grpc_utils.py  test_introspection_access.py  test_logging.py  test_narrowing.py  test_operator_auth.py  test_operator_paths.py  test_passbyref.py  test_permissions.py  test_prompt_integrity.py  test_protobuf.py  test_provider_usage.py  test_sdk.py  test_sdk_clients_contracts.py  test_sdk_stream.py  test_security.py  test_security_fetch.py  (+15 more)
tests/manifest/: test_bundle_hash.py  test_models.py  test_policy_contract.py  test_tenant_scope.py
tests/sdk/: test_auto_resolve_prompts.py  test_bootstrap_client_auth.py  test_bootstrap_helpers.py  test_bootstrap_loop.py  test_tools.py
(+44 files in other folders)
