[project]
name = "contextunity-core"
version = "0.6.0"
description = "The Kernel of ContextUnity — shared type system, gRPC contracts, ContextUnit protocol, and security tokens for the entire service mesh"
readme = "README.md"
requires-python = "==3.13.*"
authors = [
    { name = "Pylypchuk Oleksii", email = "oleksii.pylypchuk@tuta.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
    "pydantic>=2.6.0",
    "cryptography>=42.0.0",
    "PyYAML>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
contextunity-core = "contextunity.core.cli.main:app"

[project.urls]
Homepage = "https://contextunity.dev"
Documentation = "https://contextunity.dev"
Repository = "https://github.com/ContextUnity/contextunity-core"
Issues = "https://github.com/ContextUnity/cu/core/issues"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "grpcio-tools>=1.76.0",
    "ruff>=0.14.14",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]
