[project]
name = "contextunity-core"
version = "0.8.1"
description = "The Kernel of ContextUnity — shared type system, gRPC contracts, ContextUnit protocol, and security tokens for the entire service mesh"
readme = "README.md"
requires-python = "==3.13.*"
authors = [
    { name = "Pylypchuk Oleksii", email = "oleksii.pylypchuk@tuta.com" },
]
license = "Apache-2.0"
license-files = ["LICENSE.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "grpcio>=1.62.0",
    "protobuf>=4.25.0",
    "pydantic>=2.6.0",
    "cryptography>=42.0.0",
    "PyYAML>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
contextunity-core = "contextunity.core.cli.main:app"

[project.urls]
Homepage = "https://contextunity.dev"
Documentation = "https://contextunity.dev"
Repository = "https://github.com/ContextUnity/contextunity-core"
Issues = "https://github.com/ContextUnity/cu/core/issues"

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.62.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.7.0",
    "grpcio-tools>=1.76.0",
    "ruff>=0.14.14",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.8.0",
    "pytest-testmon>=2.2.0",
    "pytest-picked>=0.5.1",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-timeout>=2.4.0",
    "mypy-protobuf>=5.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-q",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "unit: fast isolated tests",
    "integration: database/filesystem/network tests",
    "e2e: full user/system flow tests",
    "slow: slow tests",
    "flaky: unstable tests that need investigation",
]

